--- a/studynotes/FSharp/IntroducingBind.html
+++ b/studynotes/FSharp/IntroducingBind.html
@@ -123,6 +123,13 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../azure_security/overview.html">Git Notes</a>
+  </li>
+</ul>
+  </li>
 </ul>
   </nav>
 </div>
