--- a/studynotes/azure_security/overview.html
+++ b/studynotes/azure_security/overview.html
@@ -126,7 +126,7 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item is-current-page" data-depth="1">
-    <a class="nav-link" href="overview.html">Git Notes</a>
+    <a class="nav-link" href="overview.html">Azure Security</a>
   </li>
 </ul>
   </li>
@@ -183,7 +183,7 @@
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="../index.html">Study Notes</a></li>
-    <li><a href="overview.html">Git Notes</a></li>
+    <li><a href="overview.html">Azure Security</a></li>
   </ul>
 </nav>
   <div class="edit-this-page"><a href="https://github.com/tremorscript/ReferenceGuides/edit/main/docs/modules/azure_security/pages/overview.adoc">Edit this Page</a></div>
