--- a/studynotes/index.html
+++ b/studynotes/index.html
@@ -126,7 +126,7 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="azure_security/overview.html">Git Notes</a>
+    <a class="nav-link" href="azure_security/overview.html">Azure Security</a>
   </li>
 </ul>
   </li>
