deploy: af12527d041d5b7da8ac5e02b2aca9fece81662a

--- a/studynotes/index.html
+++ b/studynotes/index.html
@@ -126,7 +126,7 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="azure_security/overview.html">Azure Security</a>
+    <a class="nav-link" href="azure_security_engineer/overview.html">Azure Security Engineer</a>
   </li>
 </ul>
   </li>
