deploy: af12527d041d5b7da8ac5e02b2aca9fece81662a

--- a/studynotes/azure_security_engineer/overview.html
+++ b/studynotes/azure_security_engineer/overview.html
@@ -218,18 +218,36 @@
 <h2 id="_azure_active_directory"><a class="anchor" href="#_azure_active_directory"></a>Azure Active Directory</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Azure Active Directory (Azure AD) is Microsoft&#8217;s cloud-based identity and access management service, which helps your employees sign in and access resources in:
-* External resources, such as Microsoft 365, the Azure portal, and thousands of other SaaS applications
-* Internal resources, such as apps on your corporate network and intranet, along with any cloud apps developed by your own organization.</p>
+<p>Azure Active Directory (Azure AD) is Microsoft&#8217;s cloud-based identity and access management service, which helps your employees sign in and access resources in:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>External resources, such as Microsoft 365, the Azure portal, and thousands of other SaaS applications</p>
+</li>
+<li>
+<p>Internal resources, such as apps on your corporate network and intranet, along with any cloud apps developed by your own organization.</p>
+</li>
+</ul>
 </div>
 <div class="paragraph">
 <p>A security engineer uses Azure AD to manage identities.</p>
 </div>
 <div class="paragraph">
-<p>A security engineer&#8217;s task includes:
-* Create users, groups, and administrative units to securely access resources and services.
-* Configure access to systems to be passwordless.
-* Define a strategy for using Azure AD and Azure AD Domain Services to lock down access to your solutions.</p>
+<p>A security engineer&#8217;s task includes:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Create users, groups, and administrative units to securely access resources and services.</p>
+</li>
+<li>
+<p>Configure access to systems to be passwordless.</p>
+</li>
+<li>
+<p>Define a strategy for using Azure AD and Azure AD Domain Services to lock down access to your solutions.</p>
+</li>
+</ul>
 </div>
 <div class="sect2">
 <h3 id="_azure_ad_editions"><a class="anchor" href="#_azure_ad_editions"></a>Azure AD Editions</h3>
@@ -515,9 +533,17 @@
 <p>Azure AD DS integrates with your existing Azure AD tenant, which makes it possible for users to sign in using their existing credentials.</p>
 </div>
 <div class="paragraph">
-<p>Azure AD DS replicates identity information from Azure AD. The same set of Azure AD DS features exist for both environments.
-* If you have an existing on-premises AD DS environment, you can synchronize user account information to provided a consistent identity for users.
-* For cloud-only environments, you do not need a traditional on-premises AD DS environment to use the centralized identity services of Azure AD DS.</p>
+<p>Azure AD DS replicates identity information from Azure AD. The same set of Azure AD DS features exist for both environments.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>If you have an existing on-premises AD DS environment, you can synchronize user account information to provided a consistent identity for users.</p>
+</li>
+<li>
+<p>For cloud-only environments, you do not need a traditional on-premises AD DS environment to use the centralized identity services of Azure AD DS.</p>
+</li>
+</ul>
 </div>
 <div class="imageblock">
 <div class="content">
