--- a/studynotes/index.html
+++ b/studynotes/index.html
@@ -130,6 +130,13 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="CSharp/bitwiseoperators.html">Bitwise Operators</a>
+  </li>
+</ul>
+  </li>
 </ul>
   </nav>
 </div>
