deploy: af12527d041d5b7da8ac5e02b2aca9fece81662a

--- a/studynotes/CSharp/bitwiseoperators.html
+++ b/studynotes/CSharp/bitwiseoperators.html
@@ -254,6 +254,22 @@ b((int)features);</p>
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_code_from_microsoft_learn"><a class="anchor" href="#_code_from_microsoft_learn"></a>Code from Microsoft Learn</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_bitwise_complement_operator"><a class="anchor" href="#_bitwise_complement_operator"></a>Bitwise Complement Operator (~)</h3>
+<div class="paragraph">
+<p>The <code>~</code> operator produces a bitwise complement of its operand by reversing each bit</p>
+</div>
+<div class="exampleblock">
+<div class="content">
+
+</div>
+</div>
+</div>
+</div>
+</div>
 </article>
   </div>
 </main>
