--- a/studynotes/CSharp/bitwiseoperators.html
+++ b/studynotes/CSharp/bitwiseoperators.html
@@ -132,8 +132,14 @@
   </li>
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
-  <li class="nav-item is-current-page" data-depth="1">
+  <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="overview.html">CSharp Notes</a>
+<ul class="nav-list">
+  <li class="nav-item is-current-page" data-depth="2">
     <a class="nav-link" href="bitwiseoperators.html">Bitwise Operators</a>
+  </li>
+</ul>
   </li>
 </ul>
   </li>
@@ -190,6 +196,7 @@
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="../index.html">Study Notes</a></li>
+    <li><a href="overview.html">CSharp Notes</a></li>
     <li><a href="bitwiseoperators.html">Bitwise Operators</a></li>
   </ul>
 </nav>
