--- a/studynotes/index.html
+++ b/studynotes/index.html
@@ -133,7 +133,13 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="CSharp/overview.html">CSharp Notes</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="CSharp/bitwiseoperators.html">Bitwise Operators</a>
+  </li>
+</ul>
   </li>
 </ul>
   </li>
