--- a/studynotes/CSharp/bitwiseoperators.html
+++ b/studynotes/CSharp/bitwiseoperators.html
@@ -217,46 +217,38 @@
 <div class="paragraph">
 <p><a href="https://github.com/tremorscript/CSharpLearning/tree/main/src/BitwiseOperators" target="_blank" rel="noopener">Github Projects</a></p>
 </div>
-<div class="exampleblock">
+<div class="listingblock">
 <div class="content">
-<div class="paragraph">
-<p>Console.WriteLine("Hello, World!");</p>
-</div>
-<div class="paragraph">
-<p>Action&lt;int&gt; b = n &#8658; Console.WriteLine(Convert.ToString(n, 2).PadLeft(8, '0'));</p>
-</div>
-<div class="paragraph">
-<p>b(1); //output - 00000001
-b(1 + 1); //output - 00000010</p>
-</div>
-<div class="paragraph">
-<p>var v = 0b1010;
+<pre class="highlightjs highlight"><code class="language-csharp hljs" data-lang="csharp">Console.WriteLine("Hello, World!");
+
+// a method that converts a number to binary
+Action&lt;int&gt; b = n =&gt; Console.WriteLine(Convert.ToString(n, 2).PadLeft(8, '0'));
+
+b(1); //output - 00000001
+b(1 + 1); //output - 00000010
+
+var v = 0b1010;
 var x = 0b0110;
 b(v &amp; x); // 'and' output - 00000010
 b(v | x); // 'or' output - 00001110
-b(v ^ x); // 'xor' output - 00001100</p>
-</div>
-<div class="paragraph">
-<p>var hasAC = Features.AirConditioning;
-var hasBrakes = Features.Brakes;</p>
-</div>
-<div class="paragraph">
-<p>if (hasAC == Features.AirConditioning &amp;&amp; hasBrakes == Features.Brakes)
+b(v ^ x); // 'xor' output - 00001100
+
+var hasAC = Features.AirConditioning;
+var hasBrakes = Features.Brakes;
+
+if (hasAC == Features.AirConditioning &amp;&amp; hasBrakes == Features.Brakes)
 {
     // Do some work
-}</p>
-</div>
-<div class="paragraph">
-<p>var features = Features.AirConditioning | Features.Brakes;
+}
+
+var features = Features.AirConditioning | Features.Brakes;
 Console.WriteLine(features);
-b((int)features);</p>
-</div>
-<div class="paragraph">
-<p>if ((features &amp; Features.Brakes) == Features.Brakes)
+b((int)features);
+
+if ((features &amp; Features.Brakes) == Features.Brakes)
 {
     Console.WriteLine("Has Brakes");
-}</p>
-</div>
+}</code></pre>
 </div>
 </div>
 </div>
@@ -268,11 +260,6 @@ b((int)features);</p>
 <h3 id="_bitwise_complement_operator"><a class="anchor" href="#_bitwise_complement_operator"></a>Bitwise Complement Operator (~)</h3>
 <div class="paragraph">
 <p>The <code>~</code> operator produces a bitwise complement of its operand by reversing each bit</p>
-</div>
-<div class="exampleblock">
-<div class="content">
-
-</div>
 </div>
 </div>
 </div>
