--- a/studynotes/FSharp/YieldMethod.html
+++ b/studynotes/FSharp/YieldMethod.html
@@ -119,7 +119,13 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
     <a class="nav-link" href="../azure_iot/overview.html">Azure IoT</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="../azure_iot/iothub.html">Working With IoT Hub</a>
+  </li>
+</ul>
   </li>
 </ul>
   </li>
